# policyengine-core

./: .buildinfo  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Makefile  README.md  changelog.yaml  changelog_entry.yaml  claude_code_wrapper.sh  genindex.html  intro.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.py  test.ipynb  test_toml.py
.github/: fetch_version.py  is-version-number-acceptable.sh  publish-git-tag.sh
.github/workflows/: fork-ci.yaml  pr.yaml  push.yaml
_build/logs/: myst.build.json
_downloads/621e2c7711e8623173875c33222eddb6/: changelog.yaml
_modules/: index.html
_modules/policyengine_core/: country_template.html
_sources/usage/: datasets.ipynb  reforms.md
changelog.d/: 484.fixed.md  490.fixed.md  add-ai-engineering-skills.changed.md  add-downstream-preflight.added.md  add-runtime-metadata.added.md  bool-bracket-dtype.fixed.md  branch-scoped-delete-arrays.fixed.md  derive-weights-from-household.changed.md  disallow-formula-randomness.changed.md  disallow-uprating-formula-variables.changed.md  docs-towncrier-contributing.changed.md  exempt-inherited-computation-modes.fixed.md  explicit-input-value-state.added.md  fix-anchored-period-storage-keys.fixed.md  fix-apply-reform-cache-invalidation.fixed.md  fix-assert-near-float32.fixed.md  fix-assert-near-precision.fixed.md  fix-bincount-minlength.fixed.md  fix-breakdown-mismatch-error.changed.md  fix-clone-parent-refs.fixed.md  fix-dataset-getattr.fixed.md  fix-eternity-get-subperiods.fixed.md  fix-eternity-input-cache-preservation.fixed.md  fix-fast-cache-bugs.fixed.md  fix-fast-cache-guards.fixed.md  fix-hash-seed-stability.fixed.md  fix-holder-branch-fallback.fixed.md  fix-invalidate-caches-perf.fixed.md  fix-invalidate-preserves-user-inputs.fixed.md  fix-macro-cache-per-sim.fixed.md  fix-nested-branch-input-inheritance.fixed.md  fix-push-workflow.fixed.md  fix-reform-deepcopy-parameters.fixed.md  fix-scale-clear-parent-cache.fixed.md  fix-small-mediums.fixed.md  fix-storage-delete-branch.fixed.md  fix-subsample-fast-cache.fixed.md  fix-subtracts-sign.fixed.md  fix-tbs-cache-identity.fixed.md  fix-utf8-byte-enum-encoding.fixed.md  (+26 more)
contributing/: intro.html
docs/: _config.yml  _toc.yml  add_plotly_to_book.py
docs/contributing/: intro.md
docs/usage/: charts.ipynb  country.ipynb  datasets.ipynb  parameters.md  reforms.ipynb  simulation.ipynb  yaml_tests.md
policyengine_core/: __init__.py  __version__.py  build_metadata.py  model_api.py
policyengine_core/charts/: __init__.py  api.py  bar.py  formatting.py
policyengine_core/commons/: formulas.py  misc.py  rates.py
policyengine_core/country_template/: __init__.py  entities.py  modelled_policies.yaml
policyengine_core/data/: dataset.py  survey.py
policyengine_core/data_storage/: in_memory_storage.py  on_disk_storage.py
policyengine_core/data_structures/: parameter_metadata.py  parameter_node_metadata.py
policyengine_core/entities/: entity.py  helpers.py
policyengine_core/enums/: enum.py  enum_array.py
policyengine_core/errors/: __init__.py  non_deterministic_formula_error.py  parameter_path_error.py  variable_not_found_error.py
policyengine_core/experimental/: memory_config.py
policyengine_core/holders/: helpers.py  holder.py
policyengine_core/parameters/: __init__.py  at_instant_like.py  config.py  helpers.py  parameter.py  parameter_at_instant.py  parameter_node.py  parameter_node_at_instant.py  parameter_scale.py  parameter_scale_bracket.py  vectorial_parameter_node_at_instant.py
policyengine_core/periods/: __init__.py  helpers.py  instant_.py  period_.py
policyengine_core/populations/: group_population.py  population.py
policyengine_core/projectors/: helpers.py  projector.py
policyengine_core/reforms/: __init__.py  reform.py  scenario.py  structural_reform.py
policyengine_core/scripts/: policyengine_command.py  run_data.py  run_test.py
policyengine_core/simulations/: __init__.py  helpers.py  individual_sim.py  microsimulation.py  randomness_guard.py  sim_macro_cache.py  simulation.py  simulation_builder.py  simulation_macro_cache.py
policyengine_core/taxbenefitsystems/: tax_benefit_system.py
policyengine_core/taxscales/: abstract_rate_tax_scale.py  abstract_tax_scale.py  amount_tax_scale_like.py  marginal_rate_tax_scale.py  rate_tax_scale_like.py  single_amount_tax_scale.py  tax_scale_like.py
policyengine_core/tools/: __init__.py  google_cloud.py  hugging_face.py  simulation_dumper.py  test_from_situation.py  test_runner.py  win_file_manager.py
policyengine_core/tracers/: __init__.py  computation_log.py  flat_trace.py  full_tracer.py  performance_log.py  simple_tracer.py  trace_node.py  tracing_parameter_node_at_instant.py  variable_graph.py
policyengine_core/variables/: __init__.py  config.py  defined_for.py  formula_randomness.py  helpers.py  variable.py
policyengine_core/warnings/: __init__.py  parameter_key_warning.py
policyengine_core/weighting/: __init__.py  microdf.py
python_api/: commons.html  country_template.html  data.html  data_storage.html  entities.html  enums.html  errors.html  experimental.html  extension_template.html  holders.html  parameters.html  periods.html  populations.html  projectors.html  reforms.html  scripts.html  simulations.html  taxbenefitsystems.html  taxscales.html  tools.html  tracers.html  types.html  variables.html  warnings.html
tests/: conftest.py  test_us.py
tests/core/: test_apply_reform_invalidates_cache.py  test_apply_reform_preserves_user_inputs.py  test_assert_near_precision.py  test_axes.py  test_bincount_minlength.py  test_branch_scoped_delete_arrays.py  test_build_metadata.py  test_calculate_output.py  test_countries.py  test_cycles.py  test_dataset_getattr.py  test_dump_restore.py  test_entities.py  test_eternity_subperiods.py  test_extensions.py  test_fast_cache.py  test_fast_cache_guards.py  test_formulas.py  test_holder_branch_fallback.py  (+25 more)
usage/: charts.html  cli.html  country.html  datasets.html  parameters.html  reforms.html  simulation.html
(+131 files in other folders)
