[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policyengine-core"
version = "3.23.6"
description = "Core microsimulation engine enabling country-specific policy models."
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "PolicyEngine", email = "hello@policyengine.org" }
]
keywords = ["tax", "benefit", "microsimulation", "framework"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.10"

dependencies = [
    "pytest>=8,<9",
    # NumPy 2.3+ required for Python 3.14 due to temporary elision bug fix
    # See: https://github.com/numpy/numpy/issues/28681
    "numpy>=2.1.0,<3",
    "sortedcontainers<3",
    "numexpr<3",
    "dpath<3",
    "psutil>=6,<7",
    "wheel<1",
    "h5py>=3,<4",
    "requests>=2,<3",
    "pandas>=1",
    "plotly>=5,<6",
    "ipython>=8,<9",
    "pyvis>=0.3.2",
    "microdf_python>=1.0.0",
    "huggingface_hub>=0.25.1",
    "standard-imghdr",
]

[project.optional-dependencies]
dev = [
    "black",
    "linecheck<1",
    "jupyter-book<1",
    "yaml-changelog<1",
    "coverage",
    "furo<2025",
    "markupsafe<3",
    "mypy<2",
    "sphinx==5.0.0",
    "sphinx-argparse==0.4.0",
    "sphinx-math-dollar==1.2.1",
    "types-PyYAML==6.0.12.2",
    "types-requests==2.28.11.7",
    "types-setuptools==65.6.0.2",
    "types-urllib3==1.26.25.4",
    "pytest-rerunfailures>=10,<15",
]

[project.scripts]
policyengine-core = "policyengine_core.scripts.policyengine_command:main"

[project.urls]
Homepage = "https://github.com/policyengine/policyengine-core"
Repository = "https://github.com/policyengine/policyengine-core"
Documentation = "https://policyengine.github.io/policyengine-core/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.black]
line-length = 79
