[project]
name = "policyengine-core"
version = "3.23.6"
description = "Core microsimulation engine enabling country-specific policy models."
readme = "README.md"
authors = [
    { name = "PolicyEngine", email = "hello@policyengine.org" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "dpath<3",
    "h5py>=3,<4",
    "huggingface_hub>=0.25.1",
    "ipython>=8,<9",
    "microdf_python>=1.0.0",
    "numexpr<3",
    "numpy>=2.1.0,<3",
    "pandas>=1",
    "plotly>=5,<6",
    "psutil>=6,<7",
    "pytest>=8,<9",
    "pyvis>=0.3.2",
    "requests>=2,<3",
    "sortedcontainers<3",
    "standard-imghdr",
    "wheel<1",
]

[project.optional-dependencies]
dev = [
    "build",
    "black",
    "coverage",
    "furo",
    "jupyter-book<1",
    "markupsafe==2.0.1",
    "mypy==0.991",
    "pytest-cov",
    "pytest-rerunfailures>=10,<15",
    "sphinx==5.0.0",
    "sphinx-argparse==0.4.0",
    "sphinx-math-dollar==1.2.1",
    "towncrier>=24.8.0",
    "types-PyYAML==6.0.12.2",
    "types-requests==2.28.11.7",
    "types-setuptools==65.6.0.2",
    "types-urllib3==1.26.25.4",
]

[project.scripts]
policyengine-core = "policyengine_core.scripts.policyengine_command:main"

[project.urls]
Homepage = "https://github.com/policyengine/policyengine-core"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["policyengine_core"]

[tool.towncrier]
package = "policyengine_core"
directory = "changelog.d"
filename = "CHANGELOG.md"
title_format = "## [{version}] - {project_date}"
issue_format = ""
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true
